BM adjusted ini and recipe params

--- a/CONFIG.ini
+++ b/CONFIG.ini
@@ -1,15 +1,15 @@
 [Basic]
 sMirror1PosList=38.00,82.60,28.70;38.00,98.40,28.70;38.00,82.50,39.60;38.00,98.60,39.60
 sMirror2PosList=38.00,90.60,28.70;38.00,106.50,28.70;38.00,90.70,39.80;38.00,106.60,39.80
-sMirror1PlanePosList=95.45,55.40,21.40;95.35,55.40,15.60;95.40,61.60,19.00
-sMirror2PlanePosList=92.30,62.77,16.50;92.40,69.25,14.00;92.45,69.25,19.50
+sMirror1PlanePosList=95.45,55.40,21.40;95.45,55.45,15.60;95.40,61.60,18.50
+sMirror2PlanePosList=92.30,62.77,16.50;92.35,69.40,14.00;92.45,69.40,19.50
 sMirror0PlanePosList=92.20,34.00,10.00;92.20,37.50,10.00;92.20,34.00,19.00;92.20,37.50,19.00
 Mirror1CaliPos=30.00,53.00,51.50
 Mirror2CaliPos=35.00,53.00,51.50
 Mirror0CaliPos=0,0,0
 Mirror1PutPos=121.30,16.00,37.00
 Mirror2PutPos=119.20,23.50,36.20
-sMirror1JamedPosList=85.00,27.30,8.20;83.50,27.30,8.20;87.00,21.70,8.20;81.50,21.70,8.20
+sMirror1JamedPosList=84.00,27.30,8.60;87.00,21.60,8.60;81.50,21.60,8.60
 sMirror2JamedPosList=83.50,29.00,6.70;86.50,29.00,6.70;88.50,35.10,6.70;82.50,35.10,6.70
 ShadowPos=43.50,31.00,27.50
 sMirror1UVPosList=0,0,0
@@ -17,15 +17,15 @@ sMirror2UVPosList=0,0,0
 DispensingInitialTime=3000
 InitialDispensingPos=0,0,0
 ShadowPosUp=65.00,28.00,4.70
-sMirror0PlaneHeightPosList=34.00,10.00,0.393303532498517;37.50,10.00,0.36503451756451;34.00,19.00,0.307759855872296;37.50,19.00,0.276637654535731
+sMirror0PlaneHeightPosList=34.00,10.00,0.399674765233002;37.50,10.00,0.374709637037984;34.00,19.00,0.311867811858155;37.50,19.00,0.285037754393701
 sMirrorAdjDeepLength=6000
 sMirrorPutAdjDeepLength=3179
 sMirrorAdjBackLength=-6000
 sMirrorAdjDeep2Length=4300
 sMirrorPutAdjDeep2Length=2243
 Offset_LEAttract=-26.2588512309044
-Mirror1_Offset_Adj=0.364
-Mirror2_Offset_Adj=0.451
+Mirror1_Offset_Adj=0
+Mirror2_Offset_Adj=0
 LEPos=92.20,35.70,15.00
 AttractPos=118.80,-6.50,33.50
 Offset_ModuleZ=60
@@ -36,7 +36,7 @@ CfgPath=D:\JETEAZY\PROJECT-DISPENSING\WORK\H4UY SN-104120123001.dcfg
 HWCPath=D:\JETEAZY\PROJECT-DISPENSING\WORK\H4UY SN-104120123001.hwc
 [Other]
 IsUseMeasureHeight=1
-DispensingMsTime=300
+DispensingMsTime=600
 [DX1]
 sDispensingX1_1PosList=
 sDispensingX1_2PosList=
