--- a/PIC/rcp_000002.ini
+++ b/PIC/rcp_000002.ini
@@ -1,12 +1,25 @@
 [Recipe Basic]
-CaliCamExpo=70
+CaliCamExpo=140
 CaliCamCaliData=
 CaliPicCenter=0.000,0.000
-JudgeCamExpo=100
+JudgeCamExpo=15
 JudgeCamCaliData=5
 JudgeThetaOffset=
-DispensingTime=600
-UVTime=90
+DispensingTime=900
+UVTime=16
 OtherRecipe=
 rectCali=0,0,100,100
 myMoverStr=Rectangle;1674.359,2941.566,1356.88714197216,1104.9624539736,0,
+JudgeCamExpo2=600
+CaliCamGain=0
+JudgeCamGain=0
+JudgeCamGain2=20
+CaliCamExpoM1=140
+CaliCamGainM1=0
+JudgeCamGainM1=0
+JudgeCamExpoM1=70
+CompStepSizeTotalMax=500
+CompStepSize=200
+CompStepAngleTotalMax=2
+CompStepAngleMax=30
+CompStepAngleGain=1
