--- a/WORK/DISPENSING/IO.INI
+++ b/WORK/DISPENSING/IO.INI
@@ -45,7 +45,7 @@ ADR_FINTOP = 0:QX0.2
 ADR_FINBOTTOM = 0:QX0.3
 ADR_SWITCH_ATTRACT = 0:QX0.4
 ADR_SWITCH_MATERIALBASE = 0:QX0.5
-ADR_SWITCH_UV=0:QX0.6
+ADR_SWITCH_UV=0:QB1553.0
 ADR_SWITCH_DISPENSING=0:QB1544.0
 ADR_SWITCH_LIGHT=0:QX1.0
 ADR_AXIS_BREAK=0:QX1.1
@@ -63,6 +63,8 @@ ADR_RESET_COMPLETE=0:QB1522.0
 
 ADR_CONTROLBOX=0:QB1540.0
 ADR_POGO_PIN=0:QB1545.0,QB1546.0
+
+ADR_UV_Level=0:QX0.6
 
 [Data Address]
 
