--- a/PIC/rcp_000002.ini
+++ b/PIC/rcp_000002.ini
@@ -2,11 +2,11 @@
 CaliCamExpo=140
 CaliCamCaliData=
 CaliPicCenter=0.000,0.000
-JudgeCamExpo=15
+JudgeCamExpo=14
 JudgeCamCaliData=5
 JudgeThetaOffset=
-DispensingTime=900
-UVTime=16
+DispensingTime=700
+UVTime=20
 OtherRecipe=
 rectCali=0,0,100,100
 myMoverStr=Rectangle;1674.359,2941.566,1356.88714197216,1104.9624539736,0,
@@ -20,6 +20,7 @@ JudgeCamGainM1=0
 JudgeCamExpoM1=70
 CompStepSizeTotalMax=500
 CompStepSize=200
-CompStepAngleTotalMax=2
-CompStepAngleMax=30
+CompStepAngleTotalMax=2.5
+CompStepAngleMax=50
 CompStepAngleGain=1
+CompStepAngleGain2=3
