--- a/WORK/DISPENSING/Motion2.INI
+++ b/WORK/DISPENSING/Motion2.INI
@@ -38,7 +38,7 @@ ONEMMSTEP = 100		//1mm所需要的 Step
 RULERONEMMSTEP = 1	//光學尺 1mm 所需的 Step
 MANUALSPEED =5
 MANUALSLOWSPEED =1
-GOSPEED =60
+GOSPEED =80
 GOSLOWSPEED =5
 HOMEHIGHSPEED =10
 HOMESLOWSPEED =1
@@ -46,4 +46,4 @@ RATIO = 50
 READYPOSITION =5.000
 SOFTUPPERBOUND = -500000
 SOFTLOWERBOUND = -500000
-MOTIONALIAS=柲郲耀瞎Z
+MOTIONALIAS=吸嘴模組Z
