--- a/WORK/DISPENSING/Motion5.INI
+++ b/WORK/DISPENSING/Motion5.INI
@@ -1,4 +1,4 @@
-//砞﹚Y筿诀の筿诀把计
+c//砞﹚Y筿诀の筿诀把计
 
 [Status Address]
 
@@ -43,7 +43,7 @@ GOSLOWSPEED =5
 HOMEHIGHSPEED =20
 HOMESLOWSPEED =1
 RATIO = 50
-READYPOSITION =4.620
+READYPOSITION =5.000
 SOFTUPPERBOUND = -500000
 SOFTLOWERBOUND = -500000
-MOTIONALIAS=點膠模組Z
+MOTIONALIAS=稬秸家舱Z
