--- a/WORK/DISPENSING/Motion6.INI
+++ b/WORK/DISPENSING/Motion6.INI
@@ -39,12 +39,12 @@ RULERONEMMSTEP = 1	//光學尺 1mm 所需的 Step
 MANUALSPEED =2000
 MANUALSLOWSPEED =1
 GOSPEED =5000
-GOSLOWSPEED =5
-HOMEHIGHSPEED =300
+GOSLOWSPEED =10
+HOMEHIGHSPEED =500
 HOMESLOWSPEED =100
 RATIO = 50
 READYPOSITION =0.000
 SOFTUPPERBOUND = -500000
 SOFTLOWERBOUND = -500000
-MOTIONALIAS=峚捼Z
+MOTIONALIAS=微調Theta-Z
 MOTIONUNIT=um
