--- a/WORK/DISPENSING/Motion7.INI
+++ b/WORK/DISPENSING/Motion7.INI
@@ -43,8 +43,8 @@ GOSLOWSPEED =5
 HOMEHIGHSPEED =100
 HOMESLOWSPEED =50
 RATIO = 50
-READYPOSITION =-125.000
+READYPOSITION =-170.000
 SOFTUPPERBOUND = -500000
 SOFTLOWERBOUND = -500000
-MOTIONALIAS=Î¢Õ{¦È_Y
-MOTIONUNIT=¡ã
+MOTIONALIAS=Theta-Y
+MOTIONUNIT=¢X
