--- a/WORK/DISPENSING/Motion8.INI
+++ b/WORK/DISPENSING/Motion8.INI
@@ -46,5 +46,5 @@ RATIO = 50
 READYPOSITION =25.000
 SOFTUPPERBOUND = -500000
 SOFTLOWERBOUND = -500000
-MOTIONALIAS=Î¢Õ{¦È_Z
-MOTIONUNIT=¡ã
+MOTIONALIAS=Theta-Z
+MOTIONUNIT=¢X
